iniciando página de prescrição medicamentos

--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -3,7 +3,7 @@
     <div class="ui-g-12">
         <div class="ui-g-12">
             <span class="md-inputfield">
-                <input [(ngModel)]="paciente.nome" name="nome" type="text" name="nome" pInputText disabled />
+                <input [(ngModel)]="paciente.nome" name="nome" type="text" pInputText disabled />
                 <label>Paciente</label>
             </span>
         </div>
