Adiciona eventEmitters para o componente de leito

--- a/frontend/src/app/internacao/components/leito/leito.component.html
+++ b/frontend/src/app/internacao/components/leito/leito.component.html
@@ -9,6 +9,8 @@
             [suggestions]="leitos"
             [forceSelection]="true"
             [dropdown]="true"
+            (onSelect)="aoSelecionar()"
+            (onBlur)="aoDesfocar()"
         >
         </p-autoComplete>
         <label>{{ label }}</label>
