Adiciona event binding para controlar o campo de situação do leito baseado no leito selecionado

--- a/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
+++ b/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
@@ -8,6 +8,8 @@
                     [required]="true"
                     name="leito"
                     label="Leito"
+                    (select)="aoSelecionarLeito($event)"
+                    (blur)="aoDesfocarLeito()"
                 >
                 </app-leito>
             </div>
