Cadastramento de dados em banco de dados

--- a/frontend/src/app/pacientes/components/formulario-paciente/cartao-sus/cartao-sus.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/cartao-sus/cartao-sus.component.html
@@ -5,7 +5,8 @@
                 <p-inputMask
                     pInputText
                     formControlName="numero"
-                    mask="999 9999 9999 9999"
+                    mask="99999999999 9999"
+                    placeholder="___ ____ ____ ____"
                     pTooltip="Informe o número do Cartão SUS (CNS)."
                 ></p-inputMask>
                 <label>Número</label>
@@ -48,7 +49,8 @@
                 <p-inputMask
                     pInputText
                     formControlName="cartaoNacional"
-                    mask="999 9999 9999 9999"
+                    mask="999999999999999"
+                    placeholder="___ ____ ____ ____"
                     pTooltip="Informe o CNS da mãe do paciente."
                 ></p-inputMask>
                 <label>Cartão Nacional Saúde Mãe</label>
