Usa o componente de motivo do bloqueio de leito

--- a/frontend/src/app/internacao/components/bloqueio-de-leito/bloqueio-de-leito.component.html
+++ b/frontend/src/app/internacao/components/bloqueio-de-leito/bloqueio-de-leito.component.html
@@ -32,17 +32,17 @@
                 </span>
             </div>
         </div>
-        <!-- Tipo da Reserva -->
+        <!-- Motivo -->
         <div class="ui-g-12">
             <div class="ui-g-4 ui-md-4 ui-sm-12">
                 <span class="ui-float-label">
-                    <app-tipo-de-reserva-de-leito
+                    <app-motivo-do-bloqueio-de-leito
                         [parentFormGroup]="formGroup"
                         [required]="true"
-                        name="tipoDaReserva"
-                        label="Tipo da Reserva"
+                        name="motivo"
+                        label="Motivo"
                     >
-                    </app-tipo-de-reserva-de-leito>
+                    </app-motivo-do-bloqueio-de-leito>
                 </span>
             </div>
         </div>
