Troca nome do botão de bloqueio

--- a/frontend/src/app/internacao/components/bloqueio-de-leito/bloqueio-de-leito.component.html
+++ b/frontend/src/app/internacao/components/bloqueio-de-leito/bloqueio-de-leito.component.html
@@ -82,7 +82,7 @@
         <div class="ui-g-12">
             <div class="ui-g-4 ui-md-4 ui-sm-12">
                 <p-button
-                    label="Reservar Leito"
+                    label="Bloquear Leito"
                     icon="pi pi-check"
                     [disabled]="formGroup.invalid"
                     (click)="reservarLeito($event)"
