--- a/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="ui-g ui-fluid">
-    <form [formGroup]="formularioDeCadastro" (ngSubmit)="cadastrar()">
+    <form (ngSubmit)="cadastrar()">
         <p-accordion>
             <p-accordionTab header="Dados Pessoais" [selected]="true">
                 <app-dados-pessoais [dadosPessoais]="dadosPessoais"></app-dados-pessoais>
@@ -23,7 +23,7 @@
                 <app-cartao-sus [cartaoSUS]="cartaoSUS"></app-cartao-sus>
             </p-accordionTab>
             <p-accordionTab header="observacao">
-                <div class="ui-g ui-fluid">
+                <div [formGroup]="dadosPessoais" class="ui-g ui-fluid">
                     <textarea
                         formControlName="observacao"
                         [rows]="3"
