--- a/frontend/src/app/pacientes/components/formulario-paciente/documentos/documentos.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/documentos/documentos.component.html
@@ -88,7 +88,7 @@
         <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-calendar
-                    [locale]="validade"
+                    [locale]="localizacao"
                     [yearRange]="yearValidade"
                     dateFormat="dd/mm/yy"
                     monthNavigator="true"
