Atualizaçao de funcionalidades de classificaçao de risco

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -7,10 +7,10 @@
                 {{ selectedValue }}
             </h3>
         </div>
-        <div class="ui-g-1">
+        <div class="ui-g-1" value="classificacaoDeRisco">
             <div
                 class="azul"
-                blueCard="NAO_URGENTE"
+                card="NAO_URGENTE"
                 pTooltip="Sem risco de agravo à saúde, pode aguardar atendimento"
                 style="background-color: blue; height: 50px; width: 50px;"
             ></div>
