Método salvar triagem no banco de dados implementado

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
@@ -14,3 +14,31 @@ H3 {
     text-align: right;
     margin-right: 30px;
 }
+
+.vermelho {
+    background-color: red;
+    height: 50px;
+    width: 50px;
+}
+
+.laranja {
+    background-color: orange;
+    height: 50px;
+    width: 50px;
+}
+.amarelo {
+    background-color: yellow;
+    height: 50px;
+    width: 50px;
+}
+.verde {
+    background-color: green;
+    height: 50px;
+    width: 50px;
+}
+
+.azul {
+    background-color: blue;
+    height: 50px;
+    width: 50px;
+}
