--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -1,26 +1,21 @@
-<form class risco="ui-g ui-fluid">
+<form [formGroup]="formTriagem" class risco="ui-g ui-fluid">
     <div class="ui-g-7"></div>
-    {{ selectedValue }}
     <h4>Classificação de Risco</h4>
     <div class="ui-dataview ui-g ui-sm-10">
         <div class="ui-g-7">
-            <h3>
-                {{ selectedValue }}
-            </h3>
+            <h3>{{}}</h3>
         </div>
         <div class="ui-g-1" value="classificacaoDeRisco">
             <div
                 class="azul"
-                card="NAO_URGENTE"
                 pTooltip="Sem risco de agravo à saúde, pode aguardar atendimento"
-                style="background-color: blue; height: 50px; width: 50px;"
             ></div>
             <div class="ui-g-12"></div>
-            <div blueCard="">
+            <div>
                 <p-radioButton
                     name="classificacaoDeRisco"
                     [value]="opcaoClassificacao[4].value"
-                    [(ngModel)]="selectedValue"
+                    formControlName="classificacaoDeRisco"
                 ></p-radioButton>
             </div>
         </div>
@@ -28,16 +23,14 @@
         <div class="ui-g-1">
             <div
                 class="verde"
-                greenCard=""
                 pTooltip="Baixo risco de agravo a saúde, pode aguardar atendimento"
-                style="background-color: green; height: 50px; width: 50px;"
             ></div>
             <div class="ui-g-12"></div>
-            <div greenCard="">
+            <div>
                 <p-radioButton
                     name="classificacaoDeRisco"
                     [value]="opcaoClassificacao[3].value"
-                    [(ngModel)]="selectedValue"
+                    formControlName="classificacaoDeRisco"
                 ></p-radioButton>
             </div>
         </div>
@@ -45,50 +38,38 @@
         <div class="ui-g-1">
             <div
                 class="amarelo"
-                yellowCard=""
                 pTooltip="Necessita de atendimento rápido, mas pode aguardar"
-                style="background-color: yellow; height: 50px; width: 50px;"
             ></div>
             <div class="ui-g-12"></div>
-            <div yellowCard="">
+            <div>
                 <p-radioButton
                     name="classificacaoDeRisco"
                     [value]="opcaoClassificacao[2].value"
-                    [(ngModel)]="selectedValue"
+                    formControlName="classificacaoDeRisco"
                 ></p-radioButton>
             </div>
         </div>
 
         <div class="ui-g-1">
-            <div
-                class="laranja"
-                orangeCard=""
-                pTooltip="Necessita de atendimento praticamente imediato"
-                style="background-color: orange; height: 50px; width: 50px;"
-            ></div>
+            <div class="laranja" pTooltip="Necessita de atendimento praticamente imediato"></div>
             <div class="ui-g-12"></div>
-            <div orangeCard="">
+            <div>
                 <p-radioButton
                     name="classificacaoDeRisco"
                     [value]="opcaoClassificacao[1].value"
-                    [(ngModel)]="selectedValue"
+                    formControlName="classificacaoDeRisco"
                 ></p-radioButton>
             </div>
         </div>
 
         <div class="ui-g-1">
-            <div
-                class="vermelho"
-                redCard=""
-                pTooltip="Necessita de atendimento imediato"
-                style="background-color: red; height: 50px; width: 50px;"
-            ></div>
+            <div class="vermelho" pTooltip="Necessita de atendimento imediato"></div>
             <div class="ui-g-12"></div>
-            <div redCard="">
+            <div>
                 <p-radioButton
                     name="classificacaoDeRisco"
                     [value]="opcaoClassificacao[0].value"
-                    [(ngModel)]="selectedValue"
+                    formControlName="classificacaoDeRisco"
                 ></p-radioButton>
             </div>
         </div>
