adiciona listagem de paciente em dipensação

--- a/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
+++ b/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
@@ -64,8 +64,8 @@
         </div>
         <basis-datatable type="memory" [value]="Prescricao">
             <p-column header="Prontuário" field="prontuario"></p-column>
-            <p-column header="Paciente" field="paciente"></p-column>
-            <p-column header="Localização" field="localizacao"></p-column>
+            <p-column header="Paciente" field="nome"></p-column>
+            <p-column header="Localização" field="local"></p-column>
             <p-column header="Início Prescrição" field="dataInicio"></p-column>
             <p-column header="Fim Prescrição" field="dataFim"></p-column>
         </basis-datatable>
