Alterações e melhorias nos métodos de listagem

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -3,7 +3,9 @@
     <h4>Classificação de Risco</h4>
     <div class="ui-dataview ui-g ui-sm-10">
         <div class="ui-g-7">
-            <h3>{{}}</h3>
+            <h3>
+                <span>{{ selectedRisk?.name }}</span>
+            </h3>
         </div>
         <div class="ui-g-1" value="classificacaoDeRisco">
             <div
