--- a/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
@@ -22,7 +22,7 @@
             <p-accordionTab header="Cartão SUS">
                 <app-cartao-sus [cartaoSUS]="cartaoSUS"></app-cartao-sus>
             </p-accordionTab>
-            <p-accordionTab header="observacao">
+            <p-accordionTab header="Observação">
                 <div [formGroup]="dadosPessoais" class="ui-g ui-fluid">
                     <textarea
                         formControlName="observacao"
